--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="../path/to/flowbite/dist/flowbite.js"></script>
+    <script src="https://unpkg.com/flowbite@1.4.7/dist/datepicker.js"></script> -->
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJyopg1dehOqR9LpxtLEaZ5p4JdwkwL0g&libraries=places"></script>
+
 </body>
 
 </html>
