--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <script src="https://unpkg.com/flowbite@1.4.7/dist/datepicker.js"></script> -->
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJyopg1dehOqR9LpxtLEaZ5p4JdwkwL0g&libraries=places"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJyopg1dehOqR9LpxtLEaZ5p4JdwkwL0g&libraries&callback=initMap"></script>
 
 </body>
 
